[package]
name = "blog_os"
version = "0.1.0"
authors = ["Brian Gavin <bgavin1996@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "*"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-curses",  "-drive", "format=raw,file=target/x86_64-blog_os/debug/bootimage-blog_os.bin"]
