[package]
name = "blog_os"
version = "0.1.0"
authors = ["Brian Gavin <bgavin1996@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"]}
rlibc = "0.1"
volatile = "0.2"
spin = "0.5"
x86_64 = "0.11"
uart_16550 = "0.2"
pic8259_simple = "0.2"
pc-keyboard = "0.5"
linked_list_allocator = "0.8"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-display", "none", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"]
test-success-exit-code = 33 # (0x10 << 1) | 1
run-command = ["qemu-system-x86_64","-drive", "format=raw,file={}"]
run-args = ["-curses"]
test-timeout = 300

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false